@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-panel-4.5.92.tar.bz2 855522 RMD160 1c5da120a61151ee77e309604b08dc81f527fbb9 SHA1 dcc2aa83bb832ee1091152aae245672393ac4be6 SHA256 fc5ed06c4900445428d309335eb3d4d5bde897ba9882ade293fb1e74bc455543
 DIST xfce4-panel-4.5.93.tar.bz2 861449 RMD160 ecf46f59b12f87f9494172542776e60aebe7b31f SHA1 eca59c281cb7cebd307ea4f77c705ff2085b80d3 SHA256 504451acdcca1e4c6df3c83eb026a2c36bda800e0313ccd98ccaaf5bf296762d
+DIST xfce4-panel-4.5.99.1.tar.bz2 861646 RMD160 ae3b2369f1e5b8c735b597f40989f5f43f2e2903 SHA1 f80debcd7a9bd3c8c7f09f211c8e893d9188e14b SHA256 28485e737730c4f81464e3b7d940b00c02289d4659ccaab4e17f5a0df068a5a9
 EBUILD xfce4-panel-4.5.92.ebuild 826 RMD160 8334981144e12fafc0b1d3c40f1cbb1c4b476207 SHA1 4e679e44e69929fb6a26b4cb66cb243e314f5968 SHA256 35623867c1326bdcd6720bc70d9cf21415ab32ea97ef5c935f3e1eeb43434f61
 EBUILD xfce4-panel-4.5.93.ebuild 826 RMD160 8334981144e12fafc0b1d3c40f1cbb1c4b476207 SHA1 4e679e44e69929fb6a26b4cb66cb243e314f5968 SHA256 35623867c1326bdcd6720bc70d9cf21415ab32ea97ef5c935f3e1eeb43434f61
+EBUILD xfce4-panel-4.5.99.1.ebuild 826 RMD160 8334981144e12fafc0b1d3c40f1cbb1c4b476207 SHA1 4e679e44e69929fb6a26b4cb66cb243e314f5968 SHA256 35623867c1326bdcd6720bc70d9cf21415ab32ea97ef5c935f3e1eeb43434f61
 EBUILD xfce4-panel-9999.ebuild 848 RMD160 b3ffae26bcf6fcdf4dbd17d57250476ad2e546e6 SHA1 683a848e43bafd6ead13a255665caf462caef832 SHA256 6c919edd8ae3d221ea0bd51b41da5f16d9007717ac7b4037a31cc6d05950203a
-MISC ChangeLog 1667 RMD160 1255131b27e8b81e54fbb165c894e97555418f7c SHA1 1b1c4a40bcac2053b9526513ea556d085141cddc SHA256 57b49e4e079fdfe88986553660327893bc7aa54836076f531973929e185679c8
+MISC ChangeLog 1804 RMD160 b761916d0eb4b2d6e62d4f4625419096fc3d5ae3 SHA1 41742af8bf647ad242dfc4a69190801010f70bb3 SHA256 e48e0dbc9ce800a36154603d49811cfe11b7f949ca4d7de8aa157e2b5b8d6e18
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa/DSACeKXXwrdMJoWvjBQE5ltRc28Jt
-4FQAoJQORhl8Tiu64zAuz+qACTDopasC
-=XFRO
+iEYEARECAAYFAkl9xaoACgkQKhnDs22gwa/90gCg0G88YN+2ice+WbZGRVOXHOPi
+r7EAn2lnG1+yqVTT+I8SQPWx/kGwCvLw
+=gsSa
 -----END PGP SIGNATURE-----
